Fix/misc update (#9)
* remove unused

* update gh pages url

* break down autoprefixer settings to package.json

* delete not related favicon

* fix upload dest branch to gh-pages

* update homepage url in package json and reference in built path

* update README

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,38 +1,5 @@
-<footer class="site-footer">
-
-  <div class="wrapper">
-
-    <h2 class="footer-heading">{{ site.title }}</h2>
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.author.email }}">{{ site.author.email }}</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-2">
-        <ul class="social-media-list">
-          {% if site.author.github %}
-          <li>
-            {% include icon-github.html username=site.author.github %}
-          </li>
-          {% endif %}
-
-          {% if site.author.twitter %}
-          <li>
-            {% include icon-twitter.html username=site.author.twitter %}
-          </li>
-          {% endif %}
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <p>{{ site.description }}</p>
-      </div>
-    </div>
-
-  </div>
-
+<footer class="footer text-center">
+  <p>
+    香港零一媒體有限公司版權所有 © 2017 私隱條例 廣告查詢 聯絡我們
+  </p>
 </footer>
