--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -5,12 +5,8 @@
 
   <body>
 
-    {% include header.html %}
-
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
+    <div class="container-fluid">
+      {{ content }}
     </div>
 
     {% include footer.html %}
