--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,8 +1,1 @@
-/*
-The main SCSS file for everything, yep
-*/
-
-@import "main";
-@import "base";
-@import "layout";
-@import "syntax-highlighting";
+@import "vendor/bootstrap/scss/bootstrap";
