Feature/implement basic layout (#12)
* add vendors variables

* delete unnecessary

* add font icon that generate from icomoon

* no need to use babel on vendors js

* implement main slider

* add seperator on footer links

* add bootstrap

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,5 +1,10 @@
 <footer class="footer text-center">
   <p>
-    香港零一媒體有限公司版權所有 © 2017 私隱條例 廣告查詢 聯絡我們
+    香港零一媒體有限公司版權所有 © 2017 <br>
   </p>
+  <ul class="list-inline footer__list">
+    <li class="list-inline-item"><a href="#">私隱條例</a></li>
+    <li class="list-inline-item"><a href="#">廣告查詢</a></li>
+    <li class="list-inline-item"><a href="#">聯絡我們</a></li>
+  </ul>
 </footer>
