--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -5,9 +5,9 @@
 
   <body>
 
-    <div class="container-fluid">
-      {{ content }}
-    </div>
+    {% include top.html %}
+
+    {{ content }}
 
     {% include footer.html %}
 
