--- a/src/assets/scss/animations/_animations.scss
+++ b/src/assets/scss/animations/_animations.scss
@@ -1,17 +1,2 @@
 @import './to-bottom';
-
-@keyframes snow {
-  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-  100% {background-position: 500px 500px, 100px 200px, -100px 150px;}
-}
-
-#snow{
-	background-image: url('../images/snow/snow1.png'), url('../images/snow/snow2.png');
-	height: 100%;
-	left: 0;
-	position: absolute;
-	top: 0;
-	width: 100%;
-	z-index:1;
-	animation: snow 30s linear infinite;
-}
+@import './snow';
