--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,10 +1,8 @@
 <footer class="footer text-center">
-  <p>
     香港零一媒體有限公司版權所有 © 2017 <br>
-  </p>
   <ul class="list-inline footer__list">
-    <li class="list-inline-item"><a href="#">私隱條例</a></li>
-    <li class="list-inline-item"><a href="#">廣告查詢</a></li>
-    <li class="list-inline-item"><a href="#">聯絡我們</a></li>
+    <li class="list-inline-item"><a href="https://www.hk01.com/Pages/PrivacyTerms" target="blank">私隱條例</a></li>
+    <li class="list-inline-item"><a href="http://www.hk01.com/mediakit/index.html" target="blank">廣告查詢</a></li>
+    <li class="list-inline-item"><a href="https://www.hk01.com/Pages/ContactUs" target="blank">聯絡我們</a></li>
   </ul>
 </footer>
