--- a/src/assets/scss/partials/_footer.scss
+++ b/src/assets/scss/partials/_footer.scss
@@ -1,7 +1,10 @@
 .footer {
+  color: $dark-green;
+  margin: 40px 0;
   &__list {
+    margin-bottom: -1rem;
     li {
-      padding: 0 5px;
+      padding: 0 10px;
       line-height: 1.2;
       margin: 0 !important;
 
