setup drawer section

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -33,4 +33,5 @@ $teaser-height:       94px;
 @import './partials/font-icons',
         './partials/scroll-down-btn',
         './partials/main-slider',
-        './partials/footer';
+        './partials/footer',
+        './partials/drawer';
