added ratio box and updated drawer css

--- a/src/_includes/drawer.html
+++ b/src/_includes/drawer.html
@@ -2,12 +2,117 @@
   <div class="container">
     <div class="drawer-wrap">
       <div class="drawer">
-        <div class="brand-logo">213</div>
-        <div class="box_background">
-          <img src="assets/images/drawer/box_background.svg">
+        <div class="content">
+          <div class="brand-logo">213</div>
+          <div class="box_background">
+            <img src="assets/images/drawer/box_background.svg">
+          </div>
         </div>
       </div>
-
+      <div class="drawer">
+        <div class="content">
+          <div class="brand-logo">213</div>
+          <div class="box_background">
+            <img src="assets/images/drawer/box_background.svg">
+          </div>
+        </div>
+      </div>
+      <div class="drawer">
+        <div class="content">
+          <div class="brand-logo">213</div>
+          <div class="box_background">
+            <img src="assets/images/drawer/box_background.svg">
+          </div>
+        </div>
+      </div>
+      <div class="drawer">
+        <div class="content">
+          <div class="brand-logo">213</div>
+          <div class="box_background">
+            <img src="assets/images/drawer/box_background.svg">
+          </div>
+        </div>
+      </div>
+      <div class="drawer">
+        <div class="content">
+          <div class="brand-logo">213</div>
+          <div class="box_background">
+            <img src="assets/images/drawer/box_background.svg">
+          </div>
+        </div>
+      </div>
+      <div class="drawer">
+        <div class="content">
+          <div class="brand-logo">213</div>
+          <div class="box_background">
+            <img src="assets/images/drawer/box_background.svg">
+          </div>
+        </div>
+      </div>
+      <div class="drawer">
+        <div class="content">
+          <div class="brand-logo">213</div>
+          <div class="box_background">
+            <img src="assets/images/drawer/box_background.svg">
+          </div>
+        </div>
+      </div>
+      <div class="drawer">
+        <div class="content">
+          <div class="brand-logo">213</div>
+          <div class="box_background">
+            <img src="assets/images/drawer/box_background.svg">
+          </div>
+        </div>
+      </div>
+      <div class="drawer">
+        <div class="content">
+          <div class="brand-logo">213</div>
+          <div class="box_background">
+            <img src="assets/images/drawer/box_background.svg">
+          </div>
+        </div>
+      </div>
+      <div class="drawer">
+        <div class="content">
+          <div class="brand-logo">213</div>
+          <div class="box_background">
+            <img src="assets/images/drawer/box_background.svg">
+          </div>
+        </div>
+      </div>
+      <div class="drawer">
+        <div class="content">
+          <div class="brand-logo">213</div>
+          <div class="box_background">
+            <img src="assets/images/drawer/box_background.svg">
+          </div>
+        </div>
+      </div>
+      <div class="drawer">
+        <div class="content">
+          <div class="brand-logo">213</div>
+          <div class="box_background">
+            <img src="assets/images/drawer/box_background.svg">
+          </div>
+        </div>
+      </div>
+      <div class="drawer">
+        <div class="content">
+          <div class="brand-logo">213</div>
+          <div class="box_background">
+            <img src="assets/images/drawer/box_background.svg">
+          </div>
+        </div>
+      </div>
+      <div class="drawer">
+        <div class="content">
+          <div class="brand-logo">213</div>
+          <div class="box_background">
+            <img src="assets/images/drawer/box_background.svg">
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
