--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -27,6 +27,7 @@ $teaser-height:       94px;
 
 
 @import './abstracts/functions';
+@import './abstracts/mixins';
 @import './animations/animations';
 @import './common';
 
