--- a/src/assets/scss/partials/_drawer.scss
+++ b/src/assets/scss/partials/_drawer.scss
@@ -4,41 +4,63 @@
     flex-wrap: wrap;
 
     .drawer {
-      width: calc(100%/7);
+      width: (100% / 7);
       padding: 0 10px 20px 10px;
+      position: relative;
+      perspective: 900;
+
+      &:hover .brand-logo {
+        transform: rotateY(85deg);
+      }
+
+      .content {
+        @include ratio-box('.content', 1);
+        display: flex;
+      }
 
       .brand-logo {
         width: 100%;
         height: 100%;
         background: pink;
+        position: absolute;
+        transform-style: preserve-3d;
+        transform-origin: left center;
+        transition: transform 1s;
       }
 
       img {
         width: 100%;
       }
+    }
+  }
+}
 
-      .box_background {
-
+@include media-breakpoint-only(lg) {
+  .drawer-wrapper {
+    .drawer-wrap {
+      .drawer {
+        padding: 0;
       }
     }
   }
 }
 
-@media (min-width: 768px) and (max-width: 991px) {
+@include media-breakpoint-only(md) {
   .drawer-wrapper {
     .drawer-wrap {
       .drawer {
-        width: calc(100%/5);
+        width: (100% / 5);
+        padding: 0 0 25px;
       }
     }
   }
 }
 
-@media (min-width: 320px) and (max-width: 767px) {
+@include media-breakpoint-down(sm) {
   .drawer-wrapper {
     .drawer-wrap {
       .drawer {
-        width: calc(100%/2);
+        width: (100% / 2);
       }
     }
   }
