--- a/src/_includes/drawer.html
+++ b/src/_includes/drawer.html
@@ -3,7 +3,7 @@
     <div class="drawer-wrap">
       <div class="drawer">
         <div class="content">
-          <div class="brand-logo">213</div>
+          <div class="door"></div>
           <div class="box_background">
             <img src="assets/images/drawer/box_background.svg">
           </div>
@@ -11,7 +11,7 @@
       </div>
       <div class="drawer">
         <div class="content">
-          <div class="brand-logo">213</div>
+          <div class="door"></div>
           <div class="box_background">
             <img src="assets/images/drawer/box_background.svg">
           </div>
@@ -19,7 +19,7 @@
       </div>
       <div class="drawer">
         <div class="content">
-          <div class="brand-logo">213</div>
+          <div class="door"></div>
           <div class="box_background">
             <img src="assets/images/drawer/box_background.svg">
           </div>
@@ -27,7 +27,7 @@
       </div>
       <div class="drawer">
         <div class="content">
-          <div class="brand-logo">213</div>
+          <div class="door"></div>
           <div class="box_background">
             <img src="assets/images/drawer/box_background.svg">
           </div>
@@ -35,7 +35,7 @@
       </div>
       <div class="drawer">
         <div class="content">
-          <div class="brand-logo">213</div>
+          <div class="door"></div>
           <div class="box_background">
             <img src="assets/images/drawer/box_background.svg">
           </div>
@@ -43,7 +43,7 @@
       </div>
       <div class="drawer">
         <div class="content">
-          <div class="brand-logo">213</div>
+          <div class="door"></div>
           <div class="box_background">
             <img src="assets/images/drawer/box_background.svg">
           </div>
@@ -51,7 +51,7 @@
       </div>
       <div class="drawer">
         <div class="content">
-          <div class="brand-logo">213</div>
+          <div class="door"></div>
           <div class="box_background">
             <img src="assets/images/drawer/box_background.svg">
           </div>
@@ -59,7 +59,7 @@
       </div>
       <div class="drawer">
         <div class="content">
-          <div class="brand-logo">213</div>
+          <div class="door"></div>
           <div class="box_background">
             <img src="assets/images/drawer/box_background.svg">
           </div>
@@ -67,7 +67,7 @@
       </div>
       <div class="drawer">
         <div class="content">
-          <div class="brand-logo">213</div>
+          <div class="door"></div>
           <div class="box_background">
             <img src="assets/images/drawer/box_background.svg">
           </div>
@@ -75,7 +75,7 @@
       </div>
       <div class="drawer">
         <div class="content">
-          <div class="brand-logo">213</div>
+          <div class="door"></div>
           <div class="box_background">
             <img src="assets/images/drawer/box_background.svg">
           </div>
@@ -83,7 +83,7 @@
       </div>
       <div class="drawer">
         <div class="content">
-          <div class="brand-logo">213</div>
+          <div class="door"></div>
           <div class="box_background">
             <img src="assets/images/drawer/box_background.svg">
           </div>
@@ -91,7 +91,7 @@
       </div>
       <div class="drawer">
         <div class="content">
-          <div class="brand-logo">213</div>
+          <div class="door"></div>
           <div class="box_background">
             <img src="assets/images/drawer/box_background.svg">
           </div>
@@ -99,7 +99,7 @@
       </div>
       <div class="drawer">
         <div class="content">
-          <div class="brand-logo">213</div>
+          <div class="door"></div>
           <div class="box_background">
             <img src="assets/images/drawer/box_background.svg">
           </div>
@@ -107,7 +107,7 @@
       </div>
       <div class="drawer">
         <div class="content">
-          <div class="brand-logo">213</div>
+          <div class="door"></div>
           <div class="box_background">
             <img src="assets/images/drawer/box_background.svg">
           </div>
