--- a/src/assets/scss/partials/_drawer.scss
+++ b/src/assets/scss/partials/_drawer.scss
@@ -26,6 +26,8 @@
         transform-style: preserve-3d;
         transform-origin: left center;
         transition: transform 1s;
+        transform: rotateY(-18deg);
+        box-shadow: 5px 5px 5px 0 rgba(0,0,0,0.5);
       }
 
       .box_background {
