--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -35,4 +35,5 @@ $teaser-height:       94px;
         './partials/scroll-down-btn',
         './partials/main-slider',
         './partials/footer',
-        './partials/drawer';
+        './partials/drawer',
+        './partials/drawer-modal';
