added lightbox font size

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -11,6 +11,10 @@ $grey:              #404040;
 //
 $teaser-height:       94px;
 
+//== Font-size
+$lightbox-title:      22px;
+$lightbox-sub-title:  12px;
+
 
 //== Vendors
 @import '../../../vendor/bootstrap/scss/functions';
