added drawer lightbox style

--- a/src/_includes/drawer-modal.html
+++ b/src/_includes/drawer-modal.html
@@ -1,6 +1,12 @@
-<div class="modal fade" id="drawer-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade drawer-modal" id="drawer-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
+      <div class="drawer-left">
+        <img src="assets/images/drawer/left.svg">
+      </div>
+      <div class="drawer-right">
+        <img src="assets/images/drawer/right.svg">
+      </div>
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel"></h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -11,7 +17,8 @@
         <div class="content-wrapper">
           <div class="title"></div>
           <div class="desc"></div>
-          <div class="img"></div>
+          <div class="img"><img src=""></div>
+          <div class="redirect-btn"><div class="redirect">按此登記</div></div>
         </div>
       </div>
     </div>
