Feature/implement scene animation (#16)
* add csshake library

* fix building pipeline

* import scene 1 assets

* fix url path

* implement scene 1

--- a/src/assets/scss/partials/_scroll-down-btn.scss
+++ b/src/assets/scss/partials/_scroll-down-btn.scss
@@ -1,6 +1,7 @@
 .scroll-down-btn {
-  padding: 4rem 0;
-  margin-top: auto;
+  position: absolute;
+  bottom: 2rem;
+  width: 100%;
   animation: toBottom 2s infinite;
 
   a {
