--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -25,6 +25,8 @@ $lightbox-sub-title:  12px;
 @import './vendors-extensions/owl.carousel/theme.default';
 @import '../../../vendor/owl.carousel/src/scss/theme';
 
+@import '../../../vendor/csshake/scss/tools';
+
 //== Vendors-extensions
 //
 @import './vendors-extensions/owl.carousel/theme';
