--- a/src/assets/scss/vendors-extensions/owl.carousel/_theme.scss
+++ b/src/assets/scss/vendors-extensions/owl.carousel/_theme.scss
@@ -2,9 +2,9 @@
   .owl-nav {
     [class*='owl-'] {
       position: absolute;
-      top: calc(50% + #{$teaser-height});
+      top: calc(50% + 10px);
       margin: 0;
-      padding: 0 10px;
+      padding: 50px;
       line-height: 1;
     }
 
@@ -23,7 +23,7 @@
         position: absolute;
         top: 50%;
         right: 50%;
-        margin-top: -2px;
+        margin-top: -1px;
         margin-right: 1px;
         transform: scale(0, 1);
         transform-origin: right center;
@@ -56,7 +56,7 @@
         position: absolute;
         top: 50%;
         left: 50%;
-        margin-top: -2px;
+        margin-top: -1px;
         margin-left: 1px;
         transform-origin: left center;
         transform: scale(0, 1);
