--- a/src/_includes/scene.html
+++ b/src/_includes/scene.html
@@ -10,13 +10,12 @@
           </p>
         </div>
         <div class="main-slider__graph">
-          <img src="assets/images/draft/turkey.svg" height="300">
+          <div class="main-slider__toggle icon-close float-right"></div>
+          <div id="scene-1" class="main-slider__scene"></div>
         </div>
       </div>
 
-      <div class="main-slider__item" data-hash="scene-2">
-        slide 2
-      </div>
+      
 
     </div>
   </div>
