--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -4,10 +4,17 @@
 
 #scene {
   height: calc(100vh - 100px);
-  display: flex;
-  flex-direction: column;
+  position: relative;
 
-  > .container {
-    flex: 1;
+  @include media-breakpoint-down(sm) {
+    height: auto;
+  }
+
+  &.open {
+    .owl-nav,
+    .scroll-down-btn {
+      visibility: hidden;
+      opacity: 0;
+    }
   }
 }
