--- a/src/assets/scss/partials/_main-slider.scss
+++ b/src/assets/scss/partials/_main-slider.scss
@@ -1,27 +1,79 @@
 .main-slider {
-  height: 100%;
-
-  .owl-stage-outer,
-  .owl-stage,
-  .owl-item {
-    height: 100%;
-  }
+  $this: &;
 
   &__item {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
+    &--open {
+      #{$this}__graph {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        transform: scale(1);
+        z-index: 2000;
+
+        @include media-breakpoint-down(sm) {
+          transform: scale(1.5);
+        }
+
+        &:hover {
+          transform: unset;
+          cursor: default;
+
+          svg {
+            animation: none !important;
+          }
+        }
+      }
+
+      #{$this}__teaser {
+        visibility: hidden;
+        opacity: 0;
+      }
+
+      #{$this}__toggle {
+        opacity: 1;
+      }
+    }
   }
 
+
   &__graph {
-    display: flex;
-    flex: 1;
-    align-items: center;
+    transform: scale(0.7);
+    transition: all .2s ease-in-out;
+
+    &:hover {
+      cursor: pointer;
+      transform: scale(0.75);
+
+      svg {
+        @include do-shake('shake-slow', 10, 10, 2, 700ms, 1);
+      }
+    }
+
+    svg {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  &__toggle {
+    opacity: 0;
+    color: $dark-green;
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
+  &__scene {
+    width: 100%;
+    // height: 80%;
   }
 
   &__teaser {
     width: 80%;
-    margin: 0 auto rem(62px);
+    margin: 0 auto;
     line-height: 30px;
     color: $grey;
 
