--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -6,3 +6,14 @@
     <li class="list-inline-item"><a href="https://www.hk01.com/Pages/ContactUs" target="blank">聯絡我們</a></li>
   </ul>
 </footer>
+<script>
+  if (window.netlifyIdentity) {
+    window.netlifyIdentity.on("init", user => {
+      if (!user) {
+        window.netlifyIdentity.on("login", () => {
+          document.location.href = "/admin/";
+        });
+      }
+    });
+  }
+</script>
