--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -13,5 +13,6 @@
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/images/touch/apple-touch-icon-144-precomposed.png">
   <link rel="shortcut icon" href="/assets/favicon.ico">
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
 </head>
