--- a/src/_includes/drawer.html
+++ b/src/_includes/drawer.html
@@ -1,11 +1,11 @@
 <section id="drawer-section" class="drawer-wrapper">
   <div class="container">
     <div class="drawer-wrap">
-      {% for drawer in site.data.drawer %}
-      <div class="drawer" data-toggle="modal" data-target="#drawer-modal" data-id="{{ drawer.id }}" data-title="{{ drawer.title }}" data-desc="{{ drawer.desc }}" data-img="{{ drawer.img }}">
+      {% for drawer in site.categories.drawer %}
+      <div class="drawer" data-toggle="modal" data-target="#drawer-modal" data-id="{{ drawer.id }}" data-title="{{ drawer.title }}" data-desc="{{ drawer.content }}" data-img="{{ drawer.img }}">
         <div class="content">
           <div class="door">
-              <img src="{{ drawer.door-img }}">
+              <img src="{{ drawer.image }}">
           </div>
           <div class="box_background">
             <img src="assets/images/drawer/box_background.svg">
