--- a/src/_includes/scene.html
+++ b/src/_includes/scene.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="main-slider owl-carousel owl-theme">
 
-      {% for scene in site.categories.scenes %}
+      {% for scene in site.scenes %}
       <div class="main-slider__item" data-hash="scene-1">
         <div class="main-slider__teaser text-center">
           <h5>{{scene.title}}</h5>
