--- a/src/_includes/drawer.html
+++ b/src/_includes/drawer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="drawer-wrap">
       {% for drawer in site.drawer %}
-      <div class="drawer" data-toggle="modal" data-target="#drawer-modal" data-id="{{ drawer.id }}" data-title="{{ drawer.title }}" data-desc="{{ drawer.content }}" data-img="{{ drawer.img }}">
+      <div class="drawer" data-toggle="modal" data-target="#drawer-modal" data-id="{{ drawer.id }}" data-title="{{ drawer.title }}" data-desc="{{ drawer.content }}" data-img="{{ drawer.image }}">
         <div class="content">
           <div class="door">
               <img src="{{ drawer.image }}">
